Update to README
Included a list of changes from sami2-1.00 to sami2low-1.00

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 *.o
 *.x
 *.mod
+denif.dat
+dennf.dat
+gd2qd.dat
+glatf.dat
+glonf.dat
+t1f.dat
+t2f.dat
+t3f.dat
+tef.dat
+tif.dat
+time.dat
+u1f.dat
+u2f.dat
+u3f.dat
+u4f.dat
+u5f.dat
+vexbf.dat
+vnf.dat
+vrf.dat
+vsif.dat
+vtf.dat
+zaltf.dat
