--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,30 @@
+# Fortran modules and executables
 *.o
 *.x
 *.mod
-*.pyc
+
 .DS_STORE
-denif.dat
-dennf.dat
-glatf.dat
-glonf.dat
-t1f.dat
-t2f.dat
-t3f.dat
-tef.dat
-tif.dat
+*f.dat
+*u.dat
 time.dat
-u1f.dat
-u2f.dat
-u3f.dat
-u4f.dat
-u5f.dat
-vexbf.dat
-vnf.dat
-vrf.dat
-vsif.dat
-vtf.dat
-zaltf.dat
+
+# Autosaves
+*~
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Setuptools build folder.
+/build/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+/*.egg
+
+# Sphinx rendered directories
+docs/.build
+docs/.static
+docs/.templates
