--- a/sami2py/fortran/Makefile
+++ b/sami2py/fortran/Makefile
@@ -4,7 +4,7 @@ gf = gfortran -fno-range-check -fno-automatic -ffixed-line-length-none
 compile:
 	$(gf) -c nrlmsise00_modified.f
 	$(gf) -c grid-1.00.f
-	$(gf) -c sami2low-1.00.f
+	$(gf) -c sami2py-1.00.f
 	$(gf) -c hwm93.f
 	$(gf) -c hwm07e_modified.f90
 	$(gf) -c apexcord.f90
