--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ before_install:
 install:
   - source activate test-environment
   - "python setup.py install"
+  - "cd sami2py/fortran"
+  - "make compile"
+  - "cd ../.."
+script:
+  - "nosetests -vs --with-coverage --cover-package=sami2py"
