--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ time.dat
 docs/.build
 docs/.static
 docs/.templates
+
+# dont ignore dat files in the testing folder
+!sami2py/tests/test_data/test/lon256/1999_256/*.dat
