--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 
 before_install:
   - pip install netCDF4
+  - pip install matplotlib
 install:
   - source activate test-environment
   - "python setup.py install"
