--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_install:
   - pip install matplotlib
 install:
   - source activate test-environment
-  - "python setup.py install"
-  - "cd sami2py/fortran"
-  - "make compile"
-  - "cd ../.."
+  - python setup.py install
+  - cd sami2py/fortran
+  - make compile
+  - cd ../..
 script:
-  - "nosetests -vs --with-coverage --cover-package=sami2py"
+  - nosetests -vs --with-coverage --cover-package=sami2py
