--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,6 @@ before_install:
 install:
   - source activate test-environment
   - python setup.py install
-  - cd sami2py/fortran
-  - make compile
-  - cd ../..
+  - make -C sami2py/fortran compile
 script:
   - nosetests -vs --with-coverage --cover-package=sami2py
