--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ addons:
     - gfortran
 
 before_install:
+  - pip install coveralls
+  - pip install future
   - pip install matplotlib
 install:
   - source activate test-environment
@@ -19,3 +21,6 @@ install:
   - make -C sami2py/fortran compile
 script:
   - nosetests -vs --with-coverage --cover-package=sami2py
+
+after_success:
+  - coveralls
