--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - pip install coveralls
   - pip install future
   - pip install matplotlib
-  - pip install pandas=0.24
+  - pip install pandas==0.24
 install:
   - source activate test-environment
   - python setup.py install
