--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - source activate test-environment
   - python setup.py install
 script:
-  - pytest --cov=sami2py
+  - pytest -vs --cov=sami2py
 
 after_success:
   - coveralls
