--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,16 @@ addons:
     - gfortran
 
 before_install:
-  - pip install coveralls
+  - pip install pytest
   - pip install pytest-cov
+  - pip install coveralls
   - pip install future
   - pip install matplotlib
 install:
   - source activate test-environment
   - python setup.py install
 script:
-  - pytest -vs --cov=sami2py
+  - pytest -vs --cov=sami2py/
 
 after_success:
   - coveralls
