--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - source activate test-environment
   - python setup.py install
 script:
-  - pytest -vs --cov=sami2py/
+  - pytest --cov=sami2py/
 
 after_success:
   - coveralls
