--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ install:
   - python setup.py install
 
 script:
-  - pytest -vs
+  - pytest -vs --cov=sami2py
 
 after_success:
-  - coverage run
+  - coverage run tests
   - coveralls
