--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: xenial
 matrix:
   include:
     - python: 2.7
-    - python: 3.4
     - python: 3.5
     - python: 3.6
     - python: 3.7
@@ -24,8 +23,7 @@ install:
   - python setup.py install
 
 script:
-  - pytest -vs --cov=sami2py
+  - pytest -v --cov=sami2py/
 
 after_success:
-  - coverage run tests
   - coveralls
