--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - pip install pytest
   - pip install pytest-cov
   - pip install coveralls
+  - pip install coverage
   - pip install future
   - pip install matplotlib
 
@@ -26,4 +27,5 @@ script:
   - pytest -v --cov=sami2py/
 
 after_success:
+  - coverage run
   - coveralls
