--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,6 @@ classifiers =
   Intended Audience :: Science/Research
   License :: BSD
   Natural Language :: English
-  Programming Language :: Python :: 2.7
-  Programming Language :: Python :: 3.4
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
@@ -25,7 +23,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
-python_requires = >= 2.7
+python_requires = >= 3.5
 setup_requires =
   setuptools >= 38.6
   pip >= 10
@@ -34,6 +32,7 @@ zip_safe = False
 packages = find:
 install_requires =
   numpy
-  pandas<0.25 # FIXME: upper limit on pandas and xarray are just so Travis CI passes python 2.7 tests.
-  xarray<0.12
+  pandas
+  xarray
+  matplotlib
 scripts =
