STY: add matplotlib back

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
   - pip install pytest-cov
   - pip install coveralls
   - pip install future
-  
+  - pip install matplotlib
+
 install:
   - python setup.py install
 
