--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 dist: xenial
 matrix:
   include:
+    - python: 2.7
     - python: 3.5
     - python: 3.6
     - python: 3.7
@@ -17,6 +18,8 @@ before_install:
   - pip install pytest-cov
   - pip install coveralls
   - pip install future
+  - pip install pandas
+  - pip install xarray
   - pip install matplotlib
 
 install:
