--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
   Intended Audience :: Science/Research
   License :: BSD
   Natural Language :: English
+  Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
