STY: pypi compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = sami2py
 version = 0.2.0-dev
-url = https://github.com/jklenzing/sami2py
+url = https://github.com/sami2py/sami2py
 author = Jeff Klenzing
 author_email = jeffrey.klenzing@nasa.gov
 description = Generate, read, and plot SAMI2 model runs
@@ -11,8 +11,9 @@ keywords =
 classifiers =
   Development Status :: 3 - Alpha
   Topic :: Scientific/Engineering :: Physics
+  Topic :: Scientific/Engineering :: Atmospheric Science
   Intended Audience :: Science/Research
-  License :: BSD
+  License :: OSI Approved :: BSD License
   Natural Language :: English
   Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3.5
