--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -43,3 +43,22 @@ environment:
       PYTHON_VERSION: '3.7'
       MINICONDA_HOME: C:\Miniconda
       TESTSCRIPT: 'pytest -vs --cov=sami2py/'
+init:
+  - ps: echo $env:TESTENV
+install:
+  - set PATH=%PATH%;C:\msys64\mingw64\bin
+  - '%MINICONDA_HOME%\Scripts\conda config --set always_yes yes'
+  - '%MINICONDA_HOME%\Scripts\conda update -q conda'
+  - '%MINICONDA_HOME%\Scripts\conda create -q -p C:\pythontest python=%PYTHON_VERSION% %INSTALL_LIBPYTHON% pytest numpy'
+  # remove file which conflicts with installation of package 'readme' on case-insensitive file systems
+  - del C:\pythontest\Lib\site-packages\README
+  # to stop the unnecessary "Only MS compiler supported with gfortran on win64" error on some configurations (numpy 1.9?)
+  - python ci\fix-compiler-error.py
+  - '%MINICONDA_HOME%\Scripts\activate C:\pythontest'
+  - where python
+  - where pip
+  - '%INSTALL_EXTRA_DEPS%'
+  - python setup.py clean --all build_ext --force --inplace --compiler=mingw32
+  - python setup.py develop
+test_script:
+  - '%TESTSCRIPT%'
