TST: remove pytest coverage

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,7 @@ environment:
       INSTALL_LIBPYTHON: libpython
       PYTHON_VERSION: '3.7'
       MINICONDA_HOME: C:\Miniconda-x64
-      TESTSCRIPT: 'pytest -vs --cov=sami2py/'
+      TESTSCRIPT: 'pytest -vs'
 init:
   - ps: echo $env:TESTENV
 install:
