--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,10 +3,45 @@ build: off
 configuration: Release
 environment:
   matrix:
+    - TESTENV: '2.7-nocover-64'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '2.7'
+      MINICONDA_HOME: C:\Miniconda-x64
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '2.7-nocover-32'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '2.7'
+      MINICONDA_HOME: C:\Miniconda
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '3.5-nocover-64'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '3.5'
+      MINICONDA_HOME: C:\Miniconda-x64
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '3.5-nocover-32'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '3.5'
+      MINICONDA_HOME: C:\Miniconda
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '3.6-nocover-64'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '3.6'
+      MINICONDA_HOME: C:\Miniconda-x64
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '3.6-nocover-32'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '3.6'
+      MINICONDA_HOME: C:\Miniconda
+      TESTSCRIPT: 'pytest -vs'
     - TESTENV: '3.7-nocover-64'
       INSTALL_LIBPYTHON: libpython
       PYTHON_VERSION: '3.7'
       MINICONDA_HOME: C:\Miniconda-x64
+      TESTSCRIPT: 'pytest -vs'
+    - TESTENV: '3.7-nocover-32'
+      INSTALL_LIBPYTHON: libpython
+      PYTHON_VERSION: '3.7'
+      MINICONDA_HOME: C:\Miniconda
       TESTSCRIPT: 'pytest -vs'
 init:
   - ps: echo $env:TESTENV
