--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sami2py
-version = 0.2.0-dev
+version = 0.2.0
 url = https://github.com/sami2py/sami2py
 author = Jeff Klenzing
 author_email = jeffrey.klenzing@nasa.gov
