DOC: update exclude paths

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,13 @@ ratings:
   - "**.py"
 exclude_paths:
   - ".github/**/*"
-  - "sami2py/tests/**/*"
   - "docs/**/*"
+  - "sami2py/tests/**/*"
+  - "sami2py/fortran/*"
   - "setup.py"
+  - ".*"
+  - "*.md"
+  - "*.rst"
+  - "MANIFEST.in"
+  - "mypy.ini"
+  - "setup.cfg"
