--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
 
 before_install:
   - pip install pytest-cov
+  - pip install pytest-flake8
   - pip install coveralls
   - pip install future
   - pip install pandas
@@ -29,7 +30,7 @@ before_script:
   - export DISPLAY=:99.0
 
 script:
-  - pytest -vs --cov=sami2py/
+  - pytest -vs --flake8 --cov=sami2py/
 
 after_success:
   - coveralls
