--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ before_install:
     else
       pip install -q numpy==$NUMPY_VER;
     fi
-  - pip install "matplotlib<3.3"  # FIXME: matplotlib 3.3. pre-release not compatible with numpy 1.15
+  # FIXME: matplotlib 3.3. pre-release not compatible with numpy 1.15
+  - pip install "matplotlib<3.3"  
   - pip install pytest-cov
   - pip install pytest-flake8
   - pip install coveralls
