--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ before_install:
     else
       pip install -q numpy==$NUMPY_VER;
     fi
-  # FIXME: matplotlib 3.3. pre-release not compatible with numpy 1.15
   - pip install "matplotlib<3.3"
+  # matplotlib 3.3. pre-release not compatible with numpy 1.15
   - pip install pytest-cov
   - pip install pytest-flake8
   - pip install coveralls
