--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@ time.dat
 .coverage.*
 
 # Sphinx rendered directories
-docs/.build
-docs/.static
-docs/.templates
+docs/_build
+docs/_static
+docs/_templates
 
 # dont ignore dat files in the testing folder
 !sami2py/tests/test_data/test/lon256/1999_256/*.dat
