MAINT: one version to change them all

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sami2py
-version = 0.2.2
+version = file: sami2py/version.txt
 url = https://github.com/sami2py/sami2py
 author = Jeff Klenzing
 author_email = jeffrey.klenzing@nasa.gov
