--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
   - pip install pytest-flake8
   - pip install coveralls
   - pip install future
+  - pip install scipy
 
 install:
   - python setup.py install
