--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,7 @@ install:
   - set PATH=%PATH%;C:\msys64\mingw64\bin
   - '%MINICONDA_HOME%\Scripts\conda config --set always_yes yes'
   - '%MINICONDA_HOME%\Scripts\conda update -q conda'
-  - '%MINICONDA_HOME%\Scripts\conda create -q -p C:\pythontest python=%PYTHON_VERSION% %INSTALL_LIBPYTHON% pytest numpy matplotlib xarray'
+  - '%MINICONDA_HOME%\Scripts\conda create -q -p C:\pythontest python=%PYTHON_VERSION% %INSTALL_LIBPYTHON% pytest numpy matplotlib xarray scipy'
   # remove file which conflicts with installation of package 'readme' on case-insensitive file systems
   - del C:\pythontest\Lib\site-packages\README
   - '%MINICONDA_HOME%\Scripts\activate C:\pythontest'
