STY: use requirements file

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,16 +32,11 @@ setup_requires =
 include_package_data = True
 zip_safe = False
 packages = find:
-install_requires =
-  netCDF4
-  numpy
-  pandas
-  xarray
-  matplotlib
-  scipy
+install_requires = file: requirements.txt
 scripts =
 
-[tool:pytest]
-flake8-ignore =
-  *.py W503
-  docs/conf.py ALL
+[flake8]
+ignore =
+  W503
+exclude =
+  docs/conf.py
