--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,13 @@ setup_requires =
 include_package_data = True
 zip_safe = False
 packages = find:
-install_requires = file: requirements.txt
+install_requires =
+  netCDF4
+  numpy
+  pandas
+  xarray
+  matplotlib
+  scipy
 scripts =
 
 [flake8]
