--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,14 @@ jobs:
       matrix:
         python-version: [3.8, 3.9]
         numpy_ver: [latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - python-version: 3.7
             numpy_ver: 1.17
+            os: ubuntu-latest
 
-    name: Python ${{ matrix.python-version }} with numpy ${{ matrix.numpy_ver }}
+    name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with numpy ${{ matrix.numpy_ver }}
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
