--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,18 +28,21 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      env:
-        NUMPY_VER: ${{ matrix.numpy_ver }}
+    - name: Install latest dependencies
+      if: ${{ matrix.numpy_ver == 'latest'}}
       run: |
         python -m pip install --upgrade pip
         pip install -r test_requirements.txt
         pip install -r requirements.txt
-        if [ $NUMPY_VER = 'latest' ]; then
-          pip install numpy --upgrade;
-        else
-          pip install --no-binary :numpy: numpy==$NUMPY_VER;
-        fi
+        pip install numpy --upgrade;
+
+    - name: Install NEP29 dependencies
+      if: ${{ matrix.numpy_ver != 'latest'}}
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r test_requirements.txt
+        pip install -r requirements.txt
+        pip install --no-binary :numpy: numpy==${{ matrix.numpy_ver }};
 
     - name: Manually install sami2py
       run: python setup.py install --user
