--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         include:
           - python-version: 3.7
             numpy_ver: 1.17
-            os: ubuntu-latest
+            os: [ubuntu-latest, windows-latest]
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with numpy ${{ matrix.numpy_ver }}
     runs-on: ${{ matrix.os }}
