--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,14 @@ jobs:
       matrix:
         python-version: [3.8, 3.9]
         numpy_ver: [latest]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         include:
           - python-version: 3.7
             numpy_ver: 1.17
-            os: [ubuntu-latest, windows-latest]
+            os: ubuntu-latest
+          - python-version: 3.7
+            numpy_ver: 1.17
+            os: windows-latest
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with numpy ${{ matrix.numpy_ver }}
     runs-on: ${{ matrix.os }}
