BUG: readme usage

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,8 @@ classifiers =
   Programming Language :: Python :: 3.7
   Operating System :: OS Independent
 license_file = License.md
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 
 [options]
 python_requires = >= 3.5
