--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,12 @@ classifiers =
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Natural Language :: English
-  Programming Language :: Python :: 2.7
-  Programming Language :: Python :: 3.5
-  Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
-  Operating System :: OS Independent
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Operating System :: POSIX :: Linux
+  Operating System :: MacOS :: MacOS X
+  Operating System :: Microsoft :: Windows
 license_file = License.md
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -33,15 +34,14 @@ include_package_data = True
 zip_safe = False
 packages = find:
 install_requires =
+  matplotlib
   netCDF4
   numpy
   pandas
-  xarray
-  matplotlib
   scipy
+  xarray
 scripts =
 
 [flake8]
 max-line-length=80
-ignore =
-  W503
+ignore = W503
