--- a/setup.cfg
+++ b/setup.cfg
@@ -43,5 +43,8 @@ install_requires =
 scripts =
 
 [flake8]
-max-line-length=80
-ignore = W503
+max-line-length = 80
+ignore =
+  D200
+  D202
+  W503
