--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9, 3.10]
+        python-version: ["3.9", "3.10"]
         numpy_ver: ["latest"]
         os: ["ubuntu-latest", "windows-latest"]
         include:
-          - python-version: 3.8
-            numpy_ver: 1.20
+          - python-version: "3.8"
+            numpy_ver: "1.20"
             os: "ubuntu-latest"
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with numpy ${{ matrix.numpy_ver }}
