--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,11 @@ jobs:
       if: ${{ matrix.os == 'macos-latest' }}
       run: brew reinstall gcc
 
-    - name: Set up MinGW
+    - name: Set up MinGW on Windows
       if: ${{ matrix.os == 'windows-latest' }}
-      uses: egor-tensin/setup-mingw@v2
+      uses: egor-tensin/setup-mingw@v1
       with:
         platform: x64
-        cygwin: 1
 
     - name: Manually install sami2py
       run: python setup.py install --user
