--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,21 +28,15 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install latest dependencies
-      if: ${{ matrix.numpy_ver == 'latest'}}
+    - name: Install standard dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r test_requirements.txt
         pip install -r requirements.txt
-        pip install numpy --upgrade;
+        pip install -r test_requirements.txt
 
     - name: Install NEP29 dependencies
       if: ${{ matrix.numpy_ver != 'latest'}}
       run: |
-        python -m pip install --upgrade pip
-        pip install -r test_requirements.txt
-        pip install -r requirements.txt
-        pip install --no-binary :numpy: numpy==${{ matrix.numpy_ver }};
+        pip install --no-binary :numpy: numpy==${{ matrix.numpy_ver }}
 
     - name: Reinstall fortran on MacOS
       if: ${{ matrix.os == 'macos-latest' }}
