--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         pip install --no-binary :numpy: numpy==${{ matrix.numpy_ver }}
         # Latest xarray not compatible with numpy 1.20
-        pip install xarray<=2022.3.0
+        pip install xarray==2022.3
 
     - name: Reinstall fortran on MacOS
       if: ${{ matrix.os == 'macos-latest' }}
