DOC: update docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = file: sami2py/version.txt
 url = https://github.com/sami2py/sami2py
 author = Jeff Klenzing
 author_email = jeffrey.klenzing@nasa.gov
-description = Generate, read, and plot SAMI2 model runs
+description = Generate, read, and save SAMI2 model runs
 keywords =
   SAMI2
   ionosphere
@@ -34,7 +34,6 @@ include_package_data = True
 zip_safe = False
 packages = find:
 install_requires =
-  matplotlib
   netCDF4
   numpy
   pandas
