--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install requirements for testing setup
-      run: |
-        pip install -r test_requirements.txt
+      run: pip install -r test_requirements.txt
 
     - name: Install standard dependencies
       if: ${{ matrix.numpy_ver == 'latest'}}
-      run: |
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
     - name: Install NEP29 dependencies
       if: ${{ matrix.numpy_ver != 'latest'}}
-      run: |
-        pip install -r requirements_nep29.txt
+      run: pip install -r requirements_nep29.txt
 
     - name: Reinstall fortran on MacOS
       if: ${{ matrix.os == 'macos-latest' }}
