--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         include:
           - python-version: "3.8"
-            numpy_ver: "nep029"
+            numpy_ver: "1.20.0"
             os: "ubuntu-latest"
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with numpy ${{ matrix.numpy_ver }}
@@ -31,13 +31,14 @@ jobs:
     - name: Install requirements for testing setup
       run: pip install -r test_requirements.txt
 
-    - name: Install standard dependencies
-      if: ${{ matrix.numpy_ver == 'latest'}}
-      run: pip install -r requirements.txt
-
     - name: Install NEP29 dependencies
       if: ${{ matrix.numpy_ver != 'latest'}}
-      run: pip install -r requirements_nep29.txt
+      run: |
+        pip install --no-binary :numpy: numpy==${{ matrix.numpy_ver }}
+        pip install "pandas<1.5"
+
+    - name: Install standard dependencies
+      run: pip install -r requirements.txt
 
     - name: Reinstall fortran on MacOS
       if: ${{ matrix.os == 'macos-latest' }}
