--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
         numpy_ver: ["latest"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         include:
-          - python-version: "3.8"
+          - python-version: "3.9"
             numpy_ver: "1.21"
             os: "ubuntu-latest"
 
